test/success/mut-array.dsk
let mut arr: []int = [1,2,3,4]

let mut i: int = 0
for i < 4 do
    arr[i] = arr[i] + i
    i = i + 1
end

for i < 4 do
    arr[i] = arr[i] + i
    i = i + 1
end

echo(arr)


