test/error/index-into-non-array.dsk
let x = 1
echo(x[0])
